--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <h1>Stochastic Calculus and Mathematical Finance</h1>
     <p class="instructor">Taught by Prof. Sandeep Juneja, Ashoka University</p>
 
+    <img src="/images/sandeep_juneja.png" alt="Prof. Sandeep Juneja" class="instructor-photo">
+
+
     <h2>About the Course</h2>
     <p>
         This master’s-level course introduces the mathematical foundations of modern finance, 
@@ -98,3 +101,4 @@
 
 </body>
 </html>
+
