--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1>Stochastic Calculus and Mathematical Finance</h1>
     <p class="instructor">Taught by Prof. Sandeep Juneja, Ashoka University</p>
 
-    <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-photo">
+    <img src="/images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-photo">
 
 
     <h2>About the Course</h2>
@@ -101,5 +101,6 @@
 
 </body>
 </html>
+
 
 
