--- a/index.html
+++ b/index.html
@@ -6,102 +6,67 @@
     <title>Stochastic Calculus and Mathematical Finance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Lora', serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-            color: #222;
-            background: #fff;
-        }
-        h1, h2 {
-            font-weight: 600;
-            margin-bottom: 0.5em;
-        }
-        h1 {
-            font-size: 1.8em;
-            text-align: center;
-        }
-        h2 {
-            font-size: 1.4em;
-            margin-top: 1.5em;
-        }
-        a {
-            color: #004080;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .instructor {
-            font-style: italic;
-            margin-bottom: 1em;
-            text-align: center;
-        }
-        ul {
-            margin: 0.5em 0 1em 1.5em;
-        }
-        .cta {
-            margin: 2em 0;
-            text-align: center;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 
 <body>
-    <h1>Stochastic Calculus and Mathematical Finance</h1>
-    <p class="instructor">Taught by Prof. Sandeep Juneja, Ashoka University</p>
+    <header>
+        <h1>Stochastic Calculus and Mathematical Finance</h1>
+        <p class="instructor">Taught by Prof. Sandeep Juneja, Ashoka University</p>
+    </header>
 
-    <img src="/images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-photo">
+    <main>
+        <section class="intro">
+            <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-photo">
+            <div class="course-about">
+                <h2>About the Course</h2>
+                <p>
+                    This master’s-level course introduces the mathematical foundations of modern finance, 
+                    with emphasis on stochastic processes, no-arbitrage pricing, and their applications to 
+                    equity and interest rate derivatives. We will also explore connections to diffusion models 
+                    used in contemporary generative AI.
+                </p>
+            </div>
+        </section>
 
+        <section>
+            <h2>Topics Covered</h2>
+            <ul>
+                <li>Review of measure-theoretic probability</li>
+                <li>Martingales and Brownian motion</li>
+                <li>Stochastic calculus & Itô’s formula</li>
+                <li>Girsanov’s theorem & stochastic differential equations</li>
+                <li>Discrete and continuous-time pricing theory</li>
+                <li>Stochastic volatility & interest rate models</li>
+                <li>PDE methods in finance</li>
+                <li>Applications to machine learning and generative AI</li>
+            </ul>
+        </section>
 
-    <h2>About the Course</h2>
-    <p>
-        This master’s-level course introduces the mathematical foundations of modern finance, 
-        with emphasis on stochastic processes, no-arbitrage pricing, and their applications to 
-        equity and interest rate derivatives. We will also explore connections to diffusion models 
-        used in contemporary generative AI.
-    </p>
+        <section>
+            <h2>Learning Outcomes</h2>
+            <ul>
+                <li>Develop a rigorous understanding of stochastic calculus</li>
+                <li>Apply no-arbitrage pricing methods in financial markets</li>
+                <li>Explore links between finance and generative AI models</li>
+            </ul>
+        </section>
 
-    <h2>Topics Covered</h2>
-    <ul>
-        <li>Review of measure-theoretic probability</li>
-        <li>Martingales and Brownian motion</li>
-        <li>Stochastic calculus & Itô’s formula</li>
-        <li>Girsanov’s theorem & stochastic differential equations</li>
-        <li>Discrete and continuous-time pricing theory</li>
-        <li>Stochastic volatility & interest rate models</li>
-        <li>PDE methods in finance</li>
-        <li>Applications to machine learning and generative AI</li>
-    </ul>
+        <section>
+            <h2>Course Logistics</h2>
+            <p>
+                <b>Mode:</b> Hybrid (in-person & online)<br>
+                <b>Schedule:</b> Tuesdays & Thursdays, 10:20 AM – 11:50 AM<br>
+                <b>Start Date:</b> August 26th<br>
+                <b>Duration:</b> ~40 hours of teaching<br>
+                <b>Prerequisites:</b> Probability, Linear Algebra, and Real Analysis
+            </p>
+        </section>
 
-    <h2>Learning Outcomes</h2>
-    <ul>
-        <li>Develop a rigorous understanding of stochastic calculus</li>
-        <li>Apply no-arbitrage pricing methods in financial markets</li>
-        <li>Explore links between finance and generative AI models</li>
-    </ul>
-
-    <h2>Course Logistics</h2>
-    <p>
-        <b>Mode:</b> Hybrid (in-person & online)<br>
-        <b>Schedule:</b> Tuesdays & Thursdays, 10:20 AM – 11:50 AM<br>
-        <b>Start Date:</b> August 26th<br>
-        <b>Duration:</b> ~40 hours of teaching<br>
-        <b>Prerequisites:</b> Probability, Linear Algebra, and Real Analysis
-    </p>
-
-    <div class="cta">
-        <p>Registration is free but required.</p>
-        <p><a href="https://forms.gle/your-google-form-link">👉 Register Here</a></p>
-    </div>
-
+        <section class="cta">
+            <p>Registration is free but required.</p>
+            <p><a href="https://forms.gle/your-google-form-link">👉 Register Here</a></p>
+        </section>
+    </main>
 </body>
 </html>
-
-
-
-
