--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
     </header>
 
     <main>
-        <section class="intro">
-            <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-photo">
-            <div class="course-about">
+        <section class="course-intro">
+            <div class="course-image">
+                <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja">
+            </div>
+            <div class="course-info">
                 <h2>About the Course</h2>
                 <p>
-                    This master’s-level course introduces the mathematical foundations of modern finance, 
-                    with emphasis on stochastic processes, no-arbitrage pricing, and their applications to 
-                    equity and interest rate derivatives. We will also explore connections to diffusion models 
-                    used in contemporary generative AI.
+                    This is a course for advanced undergraduate students with an aptitude and interest 
+                    in quantitative methods. Students will be exposed to no-arbitrage based deep and 
+                    beautiful ideas underlying mathematical finance. For this, they will gain adequate 
+                    exposure to stochastic calculus. Stochastic calculus is also highly relevant for 
+                    the increasingly mainstream diffusion-based generative AI.
                 </p>
             </div>
         </section>
@@ -70,3 +73,4 @@
     </main>
 </body>
 </html>
+
