--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             <p><a href="https://forms.gle/your-google-form-link">👉 Register Here</a></p>
         </section>
     </main>
+
+    <footer>
+        <p>© 2025 Stochastic Calculus Course </p>
+    </footer>
 </body>
 </html>
+
 
