--- a/index.html
+++ b/index.html
@@ -1,82 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Stochastic Calculus and Mathematical Finance</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stochastic Calculus & Mathematical Finance | Prof. Sandeep Juneja</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3:wght@400;600&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <h1>Stochastic Calculus and Mathematical Finance</h1>
-        <p class="instructor">Taught by Prof. Sandeep Juneja, Ashoka University</p>
-    </header>
+    <div class="container">
+        <header>
+            <h1>STOCHASTIC CALCULUS<br>& MATHEMATICAL<br>FINANCE</h1>
+            <p class="instructor-title">BY PROF. SANDEEP JUNEJA</p>
+        </header>
 
-    <main>
-        <section class="course-intro">
-            <div class="course-image">
-                <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja">
+        <main>
+            <section class="about-course">
+                <div class="about-text">
+                    <h2>ABOUT</h2>
+                    <p>This is a course for advanced undergraduate and graduate students with an aptitude and interest in quantitative methods. The students will be exposed to no-arbitrage-based deep and beautiful ideas underlying mathematical finance. For this they will get an adequate exposure to stochastic calculus. Stochastic calculus is also relevant for the increasingly mainstream diffusion-based generative AI.</p>
+                </div>
+                <div class="course-highlight">
+                    <p>40 HOURS OF<br>RIGOROUS LECTURES +<br>STUDENT-LED PROJECTS</p>
+                </div>
+            </section>
+
+            <section class="course-details">
+                <div class="course-content">
+                    <h2>COURSE CONTENT 📚</h2>
+                    <ul>
+                        <li>Review of Measure-Theoretic Probability</li>
+                        <li>Martingales & Brownian Motion</li>
+                        <li>Stochastic Calculus & Stochastic Integration</li>
+                        <li>Itô’s Formula & Girsanov’s Theorem</li>
+                        <li>Stochastic Differential Equations & PDE Connections</li>
+                        <li>Discrete & Continuous-Time Pricing Theory</li>
+                        <li>Stochastic Volatility Models & Interest Rate Models</li>
+                        <li>PDEs in Finance</li>
+                    </ul>
+                </div>
+                <div class="eligibility">
+                    <h2>ELIGIBILTY 👨🏻‍🎓
+                    </h2>
+                    <ul>
+                        <li>Advanced undergraduates & master’s-level students</li>
+                        <li>Strong background in Probability, Linear Algebra, and Analysis</li>
+                        <li>Aptitude & interest in quantitative methods</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="lectures">
+                <h2>LECTURES 🎥</h2>
+                <ul>
+                    <li><a href="#">Lecture 1: Introduction to Stochastic Processes (August 26, 2025)</a></li>
+                    </ul>
+            </section>
+
+            <section class="lecture-notes">
+                <h2>LECTURE NOTES 📝</h2>
+                <ul>
+                    <li><a href="notes/poster.jpeg" target="_blank">Sample Lecture Notes</a></li>
+                     </ul>
+            </section>
+        </main>
+
+        <aside class="sidebar">
+            <div class="instructor-card">
+                <img src="images/sandeep_juneja.jpg" alt="Professor Sandeep Juneja" class="instructor-image">
+                <h2>INSTRUCTOR</h2>
+                <ul>
+                    <li>Ex-Professor at TIFR & IIT Delhi</li>
+                    <li>Former Head of Quantitative Ops (Bank of America, India)</li>
+                    <li>Consultant, Reserve Bank of India</li>
+                    <li>Research in Applied Probability, Financial Mathematics, Climate & Epidemiology</li>
+                </ul>
             </div>
-            <div class="course-info">
-                <h2>About the Course</h2>
-                <p>
-                    This is a course for advanced undergraduate students with an aptitude and interest 
-                    in quantitative methods. Students will be exposed to no-arbitrage based deep and 
-                    beautiful ideas underlying mathematical finance. For this, they will gain adequate 
-                    exposure to stochastic calculus. Stochastic calculus is also highly relevant for 
-                    the increasingly mainstream diffusion-based generative AI.
-                </p>
+            <div class="schedule-card">
+                <p>📅 <strong>STARTS:</strong> AUGUST 26, 2025</p>
+                <p>🕙 <strong>WHEN:</strong> TUE & THU, 10:20 – 11:50 AM</p>
+                <p>📍 <strong>MODE:</strong> HYBRID (IN-PERSON + ONLINE)</p>
             </div>
-        </section>
+            <a href="#" class="register-button">REGISTER NOW!</a>
+        </aside>
 
-        <section>
-            <h2>Topics Covered</h2>
-            <ul>
-                <li>Review of measure-theoretic probability</li>
-                <li>Martingales and Brownian motion</li>
-                <li>Stochastic calculus & Itô’s formula</li>
-                <li>Girsanov’s theorem & stochastic differential equations</li>
-                <li>Discrete and continuous-time pricing theory</li>
-                <li>Stochastic volatility & interest rate models</li>
-                <li>PDE methods in finance</li>
-                <li>Applications to machine learning and generative AI</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Learning Outcomes</h2>
-            <ul>
-                <li>Develop a rigorous understanding of stochastic calculus</li>
-                <li>Apply no-arbitrage pricing methods in financial markets</li>
-                <li>Explore links between finance and generative AI models</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Course Logistics</h2>
-            <p>
-                <b>Mode:</b> Hybrid (in-person & online)<br>
-                <b>Schedule:</b> Tuesdays & Thursdays, 10:20 AM – 11:50 AM<br>
-                <b>Start Date:</b> August 26th<br>
-                <b>Duration:</b> ~40 hours of teaching<br>
-                <b>Prerequisites:</b> Probability, Linear Algebra, and Real Analysis
-            </p>
-        </section>
-
-        <section class="cta">
-            <p>Registration is free but required.</p>
-            <p><a href="https://forms.gle/your-google-form-link">👉 Register Here</a></p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Stochastic Calculus Course </p>
-    </footer>
+    </div>
 </body>
 </html>
-
-
-
