--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
         </aside>
 
     </div>
+
+<footer class="footer">
+  <p>
+    You can email the professor at 
+    <a href="mailto:sandeep.juneja@ashoka.edu.in">sandeep.juneja@ashoka.edu.in</a>.
+  </p>
+  <p>
+    For reporting bugs, issues, or logistical concerns, contact 
+    <a href="mailto:aman.foujdar_ug2023@ashoka.edu.in">aman.foujdar_ug2023@ashoka.edu.in</a>.
+  </p>
+</footer>
 </body>
 </html>
+
 
