--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>STOCHASTIC CALCULUS<br>& MATHEMATICAL<br>FINANCE</h1>
-            <p class="instructor-title">BY PROF. SANDEEP JUNEJA</p>
+            <p class="instructor-title">BY PROF. SANDEEP JUNEJA, Professor of Computer Science at Ashoka University, Director Safexpress Centre for Data, Learning and Decision Sciences</p>
         </header>
 
         <main>
@@ -72,10 +72,11 @@
                 <img src="images/sandeep_juneja.jpg" alt="Professor Sandeep Juneja" class="instructor-image">
                 <h2>INSTRUCTOR</h2>
                 <ul>
-                    <li>Ex-Professor at TIFR & IIT Delhi</li>
+                    <li>Former Professor at TIFR and  IIT Delhi</li>
                     <li>Former Head of Quantitative Ops (Bank of America, India)</li>
-                    <li>Consultant, Reserve Bank of India</li>
-                    <li>Research in Applied Probability, Financial Mathematics, Climate & Epidemiology</li>
+                    <li>Taught at International banks including JP Morgan, Bank of America, Morgan Stanley, Nomura, etc.</li>
+                    <li>Consulted with Research Wing of Reserve Bank of India</li>
+                    <li>Research interests in Applied Probability, Financial Mathematics, Learning Theory, Weather and Climate Modelling</li>
                 </ul>
             </div>
             <div class="schedule-card">
@@ -100,5 +101,6 @@
 </footer>
 </body>
 </html>
+
 
 
