added the link to register

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>🕙 <strong>WHEN:</strong> TUE & THU, 10:20 – 11:50 AM</p>
                 <p>📍 <strong>MODE:</strong> HYBRID (IN-PERSON + ONLINE)</p>
             </div>
-            <a href="#" class="register-button">REGISTER NOW!</a>
+            <a href="https://forms.gle/tWcRa5mRmFeim4eP8" class="register-button">REGISTER NOW!</a>
         </aside>
 
     </div>
@@ -101,6 +101,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
