--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <section class="about-course">
                 <div class="about-text">
                     <h2>ABOUT</h2>
-                    <p>This is a course for advanced undergraduate and graduate students with an aptitude and interest in quantitative methods. The students will be exposed to no-arbitrage-based deep and beautiful ideas underlying mathematical finance. For this they will get an adequate exposure to stochastic calculus. Stochastic calculus is also relevant for the increasingly mainstream diffusion-based generative AI.</p>
+                    <p>
+                        This is a course for advanced undergraduate and graduate students with an aptitude and interest in quantitative methods. The students will be exposed to no-arbitrage-based deep and beautiful ideas underlying mathematical finance. For this they will get an adequate exposure to stochastic calculus. Stochastic calculus is also relevant for the increasingly mainstream diffusion-based generative AI.
+                        <a href="https://forms.gle/FX9wtyXqjov8NrgT9">Register here.</a>
+                    </p>
                 </div>
                 <div class="course-highlight">
                     <p>40 HOURS OF<br>RIGOROUS LECTURES +<br>STUDENT-LED PROJECTS</p>
@@ -101,6 +104,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
