--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
         <header>
             <h1>STOCHASTIC CALCULUS<br>& MATHEMATICAL<br>FINANCE</h1>
-            <p class="instructor-title">BY PROF. SANDEEP JUNEJA, Professor of Computer Science at Ashoka University, Director Safexpress Centre for Data, Learning and Decision Sciences</p>
+            <p class="instructor-title">BY PROF. SANDEEP JUNEJA </p>
+            <p>Professor of Computer Science at Ashoka University, Director Safexpress Centre for Data, Learning and Decision Sciences</p>
         </header>
 
         <main>
@@ -104,6 +105,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
