--- a/index.html
+++ b/index.html
@@ -93,18 +93,19 @@
 
     </div>
 
-<footer class="footer">
+<footer class="acknowledgement" role="contentinfo" aria-labelledby="ack-title">
+  <h3 id="ack-title" class="visually-hidden">Acknowledgements</h3>
   <p>
-    You can email the professor at 
-    <a href="mailto:sandeep.juneja@ashoka.edu.in">sandeep.juneja@ashoka.edu.in</a>.
+    This course is offered with the support of the <span class="org">Safexpress Centre for Data Learning and Decision Sciences</span> and the <span class="org">Ashoka QuantFin Club</span>.
   </p>
   <p>
-    For reporting bugs, issues, or logistical concerns, contact 
-    <a href="mailto:aman.foujdar_ug2023@ashoka.edu.in">aman.foujdar_ug2023@ashoka.edu.in</a>.
+    You can email the professor at 
+    <a href="mailto:sandeep.juneja@ashoka.edu.in">sandeep.juneja@ashoka.edu.in</a>. For suggestions, reporting bugs, issues, or logistical concerns, contact <a href="mailto:aman.foujdar_ug2023@ashoka.edu.in">aman.foujdar_ug2023@ashoka.edu.in</a>.
   </p>
 </footer>
 </body>
 </html>
+
 
 
 
