--- a/index.html
+++ b/index.html
@@ -95,9 +95,14 @@
 
 <footer class="acknowledgement" role="contentinfo" aria-labelledby="ack-title">
   <h3 id="ack-title" class="visually-hidden">Acknowledgements</h3>
-  <p>
-    This course is offered with the support of the <span class="org">Safexpress Centre for Data Learning and Decision Sciences</span> and the <span class="org">Ashoka QuantFin Club</span>.
-  </p>
+    <p>
+      This course is offered with the support of the 
+      <a href="https://www.ashoka.edu.in/page/centre-for-data-learning-and-decision-sciences-cdlds/" class="org">
+        Safexpress Centre for Data Learning and Decision Sciences
+      </a> 
+      and the 
+      <span class="org">Ashoka QuantFin Club</span>.
+    </p>
   <p>
     You can email the professor at 
     <a href="mailto:sandeep.juneja@ashoka.edu.in">sandeep.juneja@ashoka.edu.in</a>. For suggestions, reporting bugs, issues, or logistical concerns, contact <a href="mailto:aman.foujdar_ug2023@ashoka.edu.in">aman.foujdar_ug2023@ashoka.edu.in</a>.
@@ -105,6 +110,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
