--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
             <section class="lectures">
                 <h2>LECTURES 🎥</h2>
                 <ul>
-                    <li><a href="#">Lecture 1: Introduction to Stochastic Processes (August 26, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=v68Fx5lsqAs">Lecture 1: Introduction to Derivatives (August 26, 2025)</a></li>
                     </ul>
             </section>
 
             <section class="lecture-notes">
                 <h2>LECTURE NOTES 📝</h2>
                 <ul>
-                    <li><a href="notes/poster.jpeg" target="_blank">Sample Lecture Notes</a></li>
+                    <li><a href="notes/poster.jpeg" target="_blank">Course Poster</a></li>
+                    <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1: Intro to Derivatives</a></li>
                      </ul>
             </section>
         </main>
@@ -110,6 +111,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
