--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <h2>LECTURES 🎥</h2>
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=v68Fx5lsqAs">Lecture 1: Introduction to Derivatives (August 26, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/live/Zme5scN6kF4?feature=shared">Lecture 2: Basic Probability & Discrete Finance (August 28, 2025)</a></li>
                     </ul>
             </section>
 
@@ -111,6 +112,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
