--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=v68Fx5lsqAs">Lecture 1: Introduction to Derivatives (August 26, 2025)</a></li>
                     <li><a href="https://www.youtube.com/live/Zme5scN6kF4?feature=shared">Lecture 2: Basic Probability & Discrete Finance (August 28, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/live/LUKuUPhQwW4?feature=shared">Lecture 3: Risk Neutral Measure & Complete Markets (September 2, 2025)</a></li>
                     </ul>
             </section>
 
@@ -68,7 +69,8 @@
                 <h2>LECTURE NOTES 📝</h2>
                 <ul>
                     <li><a href="notes/poster.jpeg" target="_blank">Course Poster</a></li>
-                    <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1: Intro to Derivatives</a></li>
+                    <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
+                    <li><a href="notes/Lecture 2.pdf" target="_blank">Lecture 3</a></li>
                      </ul>
             </section>
         </main>
@@ -112,6 +114,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
