--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <li><a href="https://www.youtube.com/watch?v=v68Fx5lsqAs">Lecture 1: Introduction to Derivatives (August 26, 2025)</a></li>
                     <li><a href="https://www.youtube.com/live/Zme5scN6kF4?feature=shared">Lecture 2: Basic Probability & Discrete Finance (August 28, 2025)</a></li>
                     <li><a href="https://www.youtube.com/live/LUKuUPhQwW4?feature=shared">Lecture 3: Risk Neutral Measure & Complete Markets (September 2, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=KC-HZLO7ikM">Lecture 4: Measure Theory Overview: Sigma Algebras (September 4, 2025)</a></li>
                     </ul>
             </section>
 
@@ -70,8 +71,9 @@
                 <ul>
                     <li><a href="notes/poster.jpeg" target="_blank">Course Poster</a></li>
                     <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
-                    <li><a href="notes/Lecture 2.pdf" target="_blank">Lecture 3</a></li>
-                     </ul>
+                    <li><a href="notes/Lecture 3.pdf" target="_blank">Lecture 3</a></li>
+                    <li><a href="notes/Lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
+                </ul>
             </section>
         </main>
 
@@ -114,6 +116,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
