--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li><a href="notes/poster.jpeg" target="_blank">Course Poster</a></li>
                     <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
                     <li><a href="notes/Lecture 3.pdf" target="_blank">Lecture 3</a></li>
-                    <li><a href="notes/Lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
+                    <li><a href="notes/lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
                 </ul>
             </section>
         </main>
@@ -116,6 +116,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
