--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li><a href="https://www.youtube.com/live/Zme5scN6kF4?feature=shared">Lecture 2: Basic Probability & Discrete Finance (August 28, 2025)</a></li>
                     <li><a href="https://www.youtube.com/live/LUKuUPhQwW4?feature=shared">Lecture 3: Risk Neutral Measure & Complete Markets (September 2, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=KC-HZLO7ikM">Lecture 4: Measure Theory Overview: Sigma Algebras (September 4, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=FKkJKFXd7sY">Lecture 5: Lebesgue Integral and Convergence (September 9, 2025)</a></li>
                     </ul>
             </section>
 
@@ -116,6 +117,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
