--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <li><a href="https://www.youtube.com/live/LUKuUPhQwW4?feature=shared">Lecture 3: Risk Neutral Measure & Complete Markets (September 2, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=KC-HZLO7ikM">Lecture 4: Measure Theory Overview: Sigma Algebras (September 4, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=FKkJKFXd7sY">Lecture 5: Lebesgue Integral and Convergence (September 9, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=d13G20q3eDM">Lecture 6: Borel-Cantelli Lemma and Relationship Between Convergence Types</a></li>
                     </ul>
             </section>
 
@@ -117,6 +118,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
