--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
                     <li><a href="notes/Lecture 3.pdf" target="_blank">Lecture 3</a></li>
                     <li><a href="notes/lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
+                    <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6 & Lecture 7</a></li>
                 </ul>
             </section>
         </main>
@@ -118,6 +119,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
