--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <li><a href="https://www.youtube.com/watch?v=KC-HZLO7ikM">Lecture 4: Measure Theory Overview: Sigma Algebras (September 4, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=FKkJKFXd7sY">Lecture 5: Lebesgue Integral and Convergence (September 9, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=d13G20q3eDM">Lecture 6: Borel-Cantelli Lemma and Relationship Between Convergence Types</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=jnVLLNjT-Fg">Lecture 7: Law of Large Numbers and Central Limit Theorem </a></li>
                     </ul>
             </section>
 
@@ -119,6 +120,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
