--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
                     <li><a href="https://www.youtube.com/live/LUKuUPhQwW4?feature=shared">Lecture 3: Risk Neutral Measure & Complete Markets (September 2, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=KC-HZLO7ikM">Lecture 4: Measure Theory Overview: Sigma Algebras (September 4, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=FKkJKFXd7sY">Lecture 5: Lebesgue Integral and Convergence (September 9, 2025)</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=d13G20q3eDM">Lecture 6: Borel-Cantelli Lemma and Relationship Between Convergence Types</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=jnVLLNjT-Fg">Lecture 7: Law of Large Numbers and Central Limit Theorem </a></li>
+                    <li><a href="https://www.youtube.com/watch?v=d13G20q3eDM">Lecture 6: Borel-Cantelli Lemma and Relationship Between Convergence Types (September 11, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=jnVLLNjT-Fg">Lecture 7: Law of Large Numbers and Central Limit Theorem (September 16, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=0bimM7MihXo">Lecture 8: Independance and Conditional Expectations (September 18, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=STHBlgmWX5E">Lecture 9: Conditional MCT, DCT and the Tower Property (September 23, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dh6hE3F02BI">Lecture 10: Properties of Martingale and Stopping Time (September 25, 2025)</a></li>
                     </ul>
             </section>
 
@@ -120,6 +123,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
