--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <li><a href="notes/Lecture 3.pdf" target="_blank">Lecture 3</a></li>
                     <li><a href="notes/lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
                     <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6 & Lecture 7</a></li>
+                    <li><a href="notes/lecture8.pdf" target="_blank">Lecture 8 & Lecture 9</a></li>
                 </ul>
             </section>
         </main>
@@ -123,6 +124,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
