--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
                     <li><a href="notes/Lecture 3.pdf" target="_blank">Lecture 3</a></li>
                     <li><a href="notes/lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
-                    <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6 & Lecture 7</a></li>
-                    <li><a href="notes/lecture8.pdf" target="_blank">Lecture 8 & Lecture 9</a></li>
+                    <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6, Lecture 7 and Lecture 8</a></li>
+                    <li><a href="notes/lecture8.pdf" target="_blank">Lecture 9 & Lecture 10</a></li>
                 </ul>
             </section>
         </main>
@@ -124,6 +124,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
