--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li><a href="https://www.youtube.com/watch?v=0bimM7MihXo">Lecture 8: Independance and Conditional Expectations (September 18, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=STHBlgmWX5E">Lecture 9: Conditional MCT, DCT and the Tower Property (September 23, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dh6hE3F02BI">Lecture 10: Properties of Martingale and Stopping Time (September 25, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=rpoEXbgvRhE">Lecture 11: Martingales, Submartingales and Brownian Motion (September 30, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=011R524Gu9o">Lecture 12: Brownian Motion Continued and Reflection Principle (October 14, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=c_SiF1jXSaQ">Lecture 13: Brownian Motion as Gaussian Process & Ito's Integral (October 16, 2025)</a></li>
                     </ul>
             </section>
 
@@ -124,6 +127,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
