--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <li><a href="notes/lecture 4-5.pdf" target="_blank">Lecture 4 & Lecture 5</a></li>
                     <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6, Lecture 7 and Lecture 8</a></li>
                     <li><a href="notes/lecture8.pdf" target="_blank">Lecture 9 & Lecture 10</a></li>
+                    <li><a href="notes/brownian_motion.pdf" target="_blank">Lecture 11, Lecture 12 & Lecture 13</a></li>
                 </ul>
             </section>
         </main>
@@ -127,6 +128,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
