--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <li><a href="https://www.youtube.com/watch?v=rpoEXbgvRhE">Lecture 11: Martingales, Submartingales and Brownian Motion (September 30, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=011R524Gu9o">Lecture 12: Brownian Motion Continued and Reflection Principle (October 14, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=c_SiF1jXSaQ">Lecture 13: Brownian Motion as Gaussian Process & Ito's Integral (October 16, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=O7aSRJ4vqz4">Lecture 14: Ito's Integral Continued (October 23, 2025)</a></li>
                     </ul>
             </section>
 
@@ -128,6 +129,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
