--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <li><a href="notes/lecture6.pdf" target="_blank">Lecture 6, Lecture 7 and Lecture 8</a></li>
                     <li><a href="notes/lecture8.pdf" target="_blank">Lecture 9 & Lecture 10</a></li>
                     <li><a href="notes/brownian_motion.pdf" target="_blank">Lecture 11, Lecture 12 & Lecture 13</a></li>
+                    <li><a href="notes/ito integral.pdf" target="_blank">Lecture 14 & Lecture 15</a></li>
                 </ul>
             </section>
         </main>
@@ -129,6 +130,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
