--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                     <li><a href="https://www.youtube.com/watch?v=011R524Gu9o">Lecture 12: Brownian Motion Continued and Reflection Principle (October 14, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=c_SiF1jXSaQ">Lecture 13: Brownian Motion as Gaussian Process & Ito's Integral (October 16, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=O7aSRJ4vqz4">Lecture 14: Ito's Integral Continued (October 23, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=xHjlcf_mZ5c">Lecture 15: General Ito's Formula (October 28, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=tvOeIWYWZKo">Lecture 16: Ornstein-Uhlenbeck (OU) Process and the Black-Scholes Model (October 30, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=S2kgnChPlFY">Lecture 17: Black-Scholes PDE and Girsanov's Theorem (November 4, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=O7aSRJ4vqz4">Lecture 14: Levy's Theorem, Girsanov's Theorem and Ito's Multivariate Calculus (November 6, 2025)</a></li>
                     </ul>
             </section>
 
@@ -130,6 +134,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
