--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li><a href="https://www.youtube.com/watch?v=xHjlcf_mZ5c">Lecture 15: General Ito's Formula (October 28, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=tvOeIWYWZKo">Lecture 16: Ornstein-Uhlenbeck (OU) Process and the Black-Scholes Model (October 30, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=S2kgnChPlFY">Lecture 17: Black-Scholes PDE and Girsanov's Theorem (November 4, 2025)</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=O7aSRJ4vqz4">Lecture 14: Levy's Theorem, Girsanov's Theorem and Ito's Multivariate Calculus (November 6, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dmtF9g4snOk">Lecture 18: Levy's Theorem, Girsanov's Theorem and Ito's Multivariate Calculus (November 6, 2025)</a></li>
                     </ul>
             </section>
 
@@ -134,6 +134,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
