--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                     <li><a href="https://www.youtube.com/watch?v=tvOeIWYWZKo">Lecture 16: Ornstein-Uhlenbeck (OU) Process and the Black-Scholes Model (October 30, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=S2kgnChPlFY">Lecture 17: Black-Scholes PDE and Girsanov's Theorem (November 4, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dmtF9g4snOk">Lecture 18: Levy's Theorem, Girsanov's Theorem and Ito's Multivariate Calculus (November 6, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=OYz6Oa1CwrM">Lecture 19: Financial Modelling via compound Poisson Processes (November 11, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=yWVjQWvdZVk">Lecture 20: Introduction to Jump Processes (November 13, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=sRrq8KH5fiw">Lecture 21: Martingale Representation Theorem and Black-Scholes Price Derivation (November 18, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=oFi1lRxfQeI">Lecture 22: Multi-dimensional Market Model (November 20, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=PL2nFrmFZws">Lecture 23: Introduction to Interest Rate Models (November 25, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=gsjkLN7F9o4">Lecture 24: Interest Rate Models Continued (November 27, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=kh6OgpqTtlE">Lecture 25: Derivatives Pricing (December 4, 2025)</a></li>
                     </ul>
             </section>
 
@@ -134,6 +141,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
