--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <li><a href="https://www.youtube.com/watch?v=tvOeIWYWZKo">Lecture 16: Ornstein-Uhlenbeck (OU) Process and the Black-Scholes Model (October 30, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=S2kgnChPlFY">Lecture 17: Black-Scholes PDE and Girsanov's Theorem (November 4, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=dmtF9g4snOk">Lecture 18: Levy's Theorem, Girsanov's Theorem and Ito's Multivariate Calculus (November 6, 2025)</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=OYz6Oa1CwrM">Lecture 19: Financial Modelling via compound Poisson Processes (November 11, 2025)</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=yWVjQWvdZVk">Lecture 20: Introduction to Jump Processes (November 13, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=OYz6Oa1CwrM">Guest Lecture 19: Financial Modelling via compound Poisson Processes (November 11, 2025)</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=yWVjQWvdZVk">Guest Lecture 20: Introduction to Jump Processes (November 13, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=sRrq8KH5fiw">Lecture 21: Martingale Representation Theorem and Black-Scholes Price Derivation (November 18, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=oFi1lRxfQeI">Lecture 22: Multi-dimensional Market Model (November 20, 2025)</a></li>
                     <li><a href="https://www.youtube.com/watch?v=PL2nFrmFZws">Lecture 23: Introduction to Interest Rate Models (November 25, 2025)</a></li>
@@ -98,6 +98,9 @@
                     <li><a href="notes/lecture8.pdf" target="_blank">Lecture 9 & Lecture 10</a></li>
                     <li><a href="notes/brownian_motion.pdf" target="_blank">Lecture 11, Lecture 12 & Lecture 13</a></li>
                     <li><a href="notes/ito integral.pdf" target="_blank">Lecture 14 & Lecture 15</a></li>
+                    <li><a href="notes/Back to finance.pdf" target="_blank">Lecture 16, Lecture 17, Lecture 18, Lecture 21 & Lecture 22</a></li>
+                    <li><a href="notes/interest_rate_model (3).pdf" target="_blank">Lecture 23 & Lecture 24</a></li>
+                    <li><a href="interest_rate_derivatives_partially covered.pdf" target="_blank">Lecture 25</a></li>
                 </ul>
             </section>
         </main>
@@ -141,6 +144,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
