--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
             </div>
 
             <div class="section">
+                <h2>Coming soon...</h2>
+            </div>
+            <!-- <div class="section">
                 <h2>🔬 Research Topics</h2>
                 <ul>
                     <li><a href="#">Machine Learning in Quantitative Trading</a></li>
@@ -284,7 +287,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <footer>
         <p>This resource is offered with the support of the <a href="https://www.ashoka.edu.in/page/centre-for-data-learning-and-decision-sciences-cdlds/">Safexpress Centre for Data Learning and Decision Sciences</a> and the Ashoka QuantFin Club.</p>
@@ -294,3 +297,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
