--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <!-- TWO COLUMN SECTION -->
             <div class="two-col">
                 <div class="section">
-                    <h2>📚 Course Content</h2>
+                    <h2><i class="fa-solid fa-book" style="color: #ffffff;"></i>Course Content</h2>
                     <ul>
                         <li>Basic interest rates, NPV, and internal rate of return</li>
                         <li>Fixed-income markets and term structure of interest rates</li>
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="section">
-                    <h2>🎯 Learning Outcomes</h2>
+                    <h2><i class="fa-solid fa-graduation-cap" style="color: #ffffff;"></i>Learning Outcomes</h2>
                     <ul>
                         <li>Understand core models used in quantitative finance</li>
                         <li>Apply portfolio theory and asset pricing models</li>
@@ -103,7 +103,7 @@
 
             <!-- REQUIREMENTS / READING LIST -->
             <div class="section">
-                <h2>📖 Requirements & Reading List</h2>
+                <h2><i class="fa-solid fa-book-open" style="color: #ffffff;"></i>Requirements & Reading List</h2>
                 <ul>
                     <li>Luenberger, D. (2009). <i>Investment Science</i>. Oxford University Press.</li>
                     <li>Shreve, S. (2005). <i>Stochastic Calculus for Finance I</i>. Springer.</li>
@@ -115,11 +115,11 @@
 
             <!-- ATTENDANCE -->
             <div class="section">
-                <h2>🕒 Attendance Policy</h2>
+                <h2><i class="fa-solid fa-chalkboard-user" style="color: #ffffff;"></i>Attendance Policy</h2>
                 <ul>
                     <li>3 excused absences permitted for all students</li>
                     <li>Additional 3 excused absences permitted for sportspersons</li>
-                    <li>Beyond this, a penalty of 0.5% per unexplained missed class will apply</li>
+                    <li>Beyond this, a penalty of 1% per unexplained missed class will apply</li>
                 </ul>
             </div>
 
@@ -136,16 +136,16 @@
             </div>
 
             <div class="info-box">
-                <p><strong>📅 Course Period:</strong> Monsoon 2025. <b></b></p>
-                <p><strong>🕙 Schedule:</strong> Tuesday & Thursday, 10:10 – 11:40 AM</p>
-                <p><strong>📍 Mode:</strong> Hybrid (In-person + Online)</p>
-                <p><strong>⏱️ Duration:</strong> 40 hours of rigorous lectures + student-led projects</p>
+                <p><strong>Course Period:</strong> Monsoon 2025. <b></b></p>
+                <p><strong>Schedule:</strong> Tuesday & Thursday, 10:10 – 11:40 AM</p>
+                <p><strong>Mode:</strong> Hybrid (In-person + Online)</p>
+                <p><strong>Duration:</strong> 40 hours of rigorous lectures + student-led projects</p>
                 <!-- <p style="margin-top: 1rem;"><a href="https://forms.gle/FX9wtyXqjov8NrgT9" class="cta-button">Register Now</a></p> -->
             </div>
 
             <div class="two-col">
                 <div class="section">
-                    <h2>📚 Course Content</h2>
+                    <h2><i class="fa-solid fa-book" style="color: #ffffff;"></i>Course Content</h2>
                     <ul>
                         <li>Review of Measure-Theoretic Probability</li>
                         <li>Martingales & Brownian Motion</li>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="section">
-                    <h2>👨🏻‍🎓 Eligibility</h2>
+                    <h2><i class="fa-solid fa-graduation-cap" style="color: #ffffff;">Eligibility</h2>
                     <ul>
                         <li>Advanced undergraduates & master's-level students</li>
                         <li>Strong background in Probability, Linear Algebra, and Analysis</li>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="section">
-                <h2>🎥 Lectures</h2>
+                <h2><i class="fa-brands fa-youtube" style="color: #ffffff;"></i>Lectures</h2>
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=v68Fx5lsqAs" target="_blank">Lecture 1: Introduction to Derivatives (August 26, 2025)</a></li>
                     <li><a href="https://www.youtube.com/live/Zme5scN6kF4?feature=shared" target="_blank">Lecture 2: Basic Probability & Discrete Finance (August 28, 2025)</a></li>
@@ -200,7 +200,7 @@
             </div>
 
             <div class="section">
-                <h2>📝 Lecture Notes</h2>
+                <h2><i class="fa-brands fa-leanpub" style="color: #ffffff;"></i>Lecture Notes</h2>
                 <ul>
                     <li><a href="notes/poster.jpeg" target="_blank">Course Poster</a></li>
                     <li><a href="notes/Lecture 1.pdf" target="_blank">Lecture 1 & Lecture 2</a></li>
@@ -297,4 +297,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
