--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="section">
-                    <h2><i class="fa-solid fa-graduation-cap" style="color: #ffffff;">Eligibility</h2>
+                    <h2><i class="fa-solid fa-graduation-cap" style="color: #ffffff;"></i>Eligibility</h2>
                     <ul>
                         <li>Advanced undergraduates & master's-level students</li>
                         <li>Strong background in Probability, Linear Algebra, and Analysis</li>
@@ -297,5 +297,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
