--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuantFin Hub</title>
+    <link rel="icon" type="image/jpeg" href="/Users/akfaujdar2080/Downloads/scdlds_ashoka_logo.jpeg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -226,6 +227,16 @@
                     <li>Research in Applied Probability, Financial Mathematics, Learning Theory</li>
                 </ul>
             </div>
+
+            <div class="instructor-card">
+                <img src="images/aman_foujdar.jpg" alt="Aman Foujdar" class="instructor-img">
+                <h3>Aman Foujdar</h3>
+                <ul>
+                    <li>Research Assistant under Prof. Juneja at SCDLDS</li>
+                    <li>Interested in Machine Learning, Deep RL, GenAI, Financial Markets</li>
+                    <li>Mathematics & Computer Science at Ashoka University. President of the Ashoka QuantFin Club (AQFC).</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -245,7 +256,7 @@
                 <h2>Coming soon...</h2>
             </div>
             <!-- <div class="section">
-                <h2>🔬 Research Topics</h2>
+                <h2>Research Topics</h2>
                 <ul>
                     <li><a href="#">Machine Learning in Quantitative Trading</a></li>
                     <li><a href="#">Deep Learning for Derivatives Pricing</a></li>
@@ -257,7 +268,7 @@
             </div>
 
             <div class="section">
-                <h2>📊 Student Projects</h2>
+                <h2>Student Projects</h2>
                 <ul>
                     <li>Portfolio Optimization using Reinforcement Learning</li>
                     <li>Volatility Surface Modeling with Neural Networks</li>
@@ -268,7 +279,7 @@
             </div>
 
             <div class="section">
-                <h2>🎓 Advanced Seminars</h2>
+                <h2>Advanced Seminars</h2>
                 <ul>
                     <li><a href="#">Seminar 1: Rough Volatility Models</a></li>
                     <li><a href="#">Seminar 2: Quantum Computing in Finance</a></li>
@@ -278,17 +289,16 @@
             </div>
 
             <div class="section">
-                <h2>💡 Upcoming Events</h2>
+                <h2>Upcoming Events</h2>
                 <ul>
                     <li>Workshop: Python for Financial Engineering (TBA)</li>
                     <li>Guest Lecture: Industry Perspectives on Quant Finance (TBA)</li>
                     <li>Hackathon: Algorithmic Trading Challenge (TBA)</li>
                     <li>Panel Discussion: Career Paths in Quantitative Finance (TBA)</li>
                 </ul>
-            </div>
+            </div> -->
         </div>
-    </div> -->
-
+    </div> 
     <footer>
         <p>This resource is offered with the support of the <a href="https://www.ashoka.edu.in/page/centre-for-data-learning-and-decision-sciences-cdlds/">Safexpress Centre for Data Learning and Decision Sciences</a> and the Ashoka QuantFin Club.</p>
         <p> You can email the professor at <a href="mailto:sandeep.juneja@ashoka.edu.in">sandeep.juneja@ashoka.edu.in</a>. For suggestions, reporting bugs, issues, or logistical concerns, contact <a href="mailto:aman.foujdar_ug2023@ashoka.edu.in">aman.foujdar_ug2023@ashoka.edu.in</a>.</p>
@@ -297,6 +307,5 @@
     <script src="script.js"></script>
 </body>
 </html>
-
 
 
